# factorio-on-demand

./: Cargo.toml  LICENSE  README.md
crates/shared/src/: api.rs
services/dashboard/: .gitignore  Cargo.toml  env.example
services/dashboard/src/: app.rs  auth.rs  config.rs  db.rs  lib.rs  main.rs  state.rs
services/dashboard/src/routes/: internal.rs  mod.rs  sessions.rs  static_files.rs  status.rs  wake.rs  ws.rs
services/dashboard/src/status/: broadcaster.rs  mod.rs  probe.rs
services/dashboard/src/web/: app.js  index.html  style.css
services/watcher/: Cargo.toml  env.example
services/watcher/src/: api.rs  config.rs  engine.rs  lib.rs  log_reader.rs  logging.rs  main.rs  parser.rs  state_machine.rs  suspend.rs  time.rs
