[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wake-on-lan = "0.2"
rusqlite = { version = "0.39.0", features = ["bundled"] }
dotenvy = "0.15"
futures-util = "0.3.32"
shared = { path = "../../crates/shared" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
