[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
regex = "1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["clock"] }
async-trait = "0.1"
shared = { path = "../../crates/shared" }
